--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  padding: 0;
+  margin:  0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+
+  --Dark-Elements : hsl(209, 23%, 22%);   /*(Dark Mode Elements)*/
+
+  --Dark-Background : hsl(207, 26%, 17%);   /*(Dark Mode Background)*/
+
+  --Light-Text : hsl(200, 15%, 8%);   /*(Light Mode Text)*/
+
+  --Input-Elements : hsl(0, 0%, 52%);   /*(Light Mode Input)*/
+
+  --Light-Background : hsl(0, 0%, 98%);   /*(Light Mode Background)*/
+
+  --White : hsl(0, 0%, 100%);   /*(Dark Mode Text & Light Mode Elements)*/
+
 }
+
+html, body {
+  font-size: 1rem;
+}
+
+body {
+  margin: 0;
+  font-family: 'Nunito', sans-serif;
+}
+
